parser/CurlParser.py
# Generated from Curl.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CurlParser ( Parser ):

    grammarFileName = "Curl.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'curl'", "'-X'", "'-H'", "'\"'", "':'", 
                     "'://'", "'/'", "'['", "']'", "'::'", "'@'", "'#'", 
                     "'?'", "'&'", "'='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "DIGITS", "METHOD", "HEX", "STRING", "WS" ]

    RULE_curl = 0
    RULE_args = 1
    RULE_method = 2
    RULE_header = 3
    RULE_headerName = 4
    RULE_headerValue = 5
    RULE_uri = 6
    RULE_scheme = 7
    RULE_host = 8
    RULE_hostname = 9
    RULE_v6host = 10
    RULE_port = 11
    RULE_path = 12
    RULE_user = 13
    RULE_login = 14
    RULE_password = 15
    RULE_frag = 16
    RULE_query = 17
    RULE_search = 18
    RULE_searchparameter = 19
    RULE_string = 20

    ruleNames =  [ "curl", "args", "method", "header", "headerName", "headerValue", 
                   "uri", "scheme", "host", "hostname", "v6host", "port", 
                   "path", "user", "login", "password", "frag", "query", 
                   "search", "searchparameter", "string" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    DIGITS=16
    METHOD=17
    HEX=18
    STRING=19
    WS=20

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class CurlContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def uri(self):
            return self.getTypedRuleContext(CurlParser.UriContext,0)


        def args(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CurlParser.ArgsContext)
            else:
                return self.getTypedRuleContext(CurlParser.ArgsContext,i)


        def getRuleIndex(self):
            return CurlParser.RULE_curl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCurl" ):
                listener.enterCurl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCurl" ):
                listener.exitCurl(self)




    def curl(self):

        localctx = CurlParser.CurlContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_curl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.match(CurlParser.T__0)
            self.state = 46
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2 or _la==3:
                self.state = 43
                self.args()
                self.state = 48
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 49
            self.uri()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def method(self):
            return self.getTypedRuleContext(CurlParser.MethodContext,0)


        def header(self):
            return self.getTypedRuleContext(CurlParser.HeaderContext,0)


        def getRuleIndex(self):
            return CurlParser.RULE_args

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgs" ):
                listener.enterArgs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgs" ):
                listener.exitArgs(self)




    def args(self):

        localctx = CurlParser.ArgsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_args)
        try:
            self.state = 53
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 51
                self.method()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 52
                self.header()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def METHOD(self):
            return self.getToken(CurlParser.METHOD, 0)

        def getRuleIndex(self):
            return CurlParser.RULE_method

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethod" ):
                listener.enterMethod(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethod" ):
                listener.exitMethod(self)




    def method(self):

        localctx = CurlParser.MethodContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_method)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.match(CurlParser.T__1)
            self.state = 56
            self.match(CurlParser.METHOD)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HeaderContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def headerName(self):
            return self.getTypedRuleContext(CurlParser.HeaderNameContext,0)


        def headerValue(self):
            return self.getTypedRuleContext(CurlParser.HeaderValueContext,0)


        def getRuleIndex(self):
            return CurlParser.RULE_header

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHeader" ):
                listener.enterHeader(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHeader" ):
                listener.exitHeader(self)




    def header(self):

        localctx = CurlParser.HeaderContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_header)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(CurlParser.T__2)
            self.state = 59
            self.match(CurlParser.T__3)
            self.state = 60
            self.headerName()
            self.state = 61
            self.match(CurlParser.T__4)
            self.state = 62
            self.headerValue()
            self.state = 63
            self.match(CurlParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HeaderNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def string(self):
            return self.getTypedRuleContext(CurlParser.StringContext,0)


        def getRuleIndex(self):
            return CurlParser.RULE_headerName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHeaderName" ):
                listener.enterHeaderName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHeaderName" ):
                listener.exitHeaderName(self)




    def headerName(self):

        localctx = CurlParser.HeaderNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_headerName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.string()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HeaderValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def string(self):
            return self.getTypedRuleContext(CurlParser.StringContext,0)


        def getRuleIndex(self):
            return CurlParser.RULE_headerValue

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHeaderValue" ):
                listener.enterHeaderValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHeaderValue" ):
                listener.exitHeaderValue(self)




    def headerValue(self):

        localctx = CurlParser.HeaderValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_headerValue)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.string()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UriContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def scheme(self):
            return self.getTypedRuleContext(CurlParser.SchemeContext,0)


        def host(self):
            return self.getTypedRuleContext(CurlParser.HostContext,0)


        def login(self):
            return self.getTypedRuleContext(CurlParser.LoginContext,0)


        def port(self):
            return self.getTypedRuleContext(CurlParser.PortContext,0)


        def query(self):
            return self.getTypedRuleContext(CurlParser.QueryContext,0)


        def frag(self):
            return self.getTypedRuleContext(CurlParser.FragContext,0)


        def WS(self):
            return self.getToken(CurlParser.WS, 0)

        def path(self):
            return self.getTypedRuleContext(CurlParser.PathContext,0)


        def getRuleIndex(self):
            return CurlParser.RULE_uri

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUri" ):
                listener.enterUri(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUri" ):
                listener.exitUri(self)




    def uri(self):

        localctx = CurlParser.UriContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_uri)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.scheme()
            self.state = 70
            self.match(CurlParser.T__5)
            self.state = 72
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 71
                self.login()


            self.state = 74
            self.host()
            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 75
                self.match(CurlParser.T__4)
                self.state = 76
                self.port()


            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 79
                self.match(CurlParser.T__6)
                self.state = 81
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==16 or _la==19:
                    self.state = 80
                    self.path()




            self.state = 86
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==13:
                self.state = 85
                self.query()


            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==12:
                self.state = 88
                self.frag()


            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==20:
                self.state = 91
                self.match(CurlParser.WS)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SchemeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def string(self):
            return self.getTypedRuleContext(CurlParser.StringContext,0)


        def getRuleIndex(self):
            return CurlParser.RULE_scheme

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterScheme" ):
                listener.enterScheme(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitScheme" ):
                listener.exitScheme(self)




    def scheme(self):

        localctx = CurlParser.SchemeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_scheme)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.string()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HostContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def hostname(self):
            return self.getTypedRuleContext(CurlParser.HostnameContext,0)


        def getRuleIndex(self):
            return CurlParser.RULE_host

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHost" ):
                listener.enterHost(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHost" ):
                listener.exitHost(self)




    def host(self):

        localctx = CurlParser.HostContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_host)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 96
                self.match(CurlParser.T__6)


            self.state = 99
            self.hostname()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HostnameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CurlParser.RULE_hostname

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class IPv6HostContext(HostnameContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CurlParser.HostnameContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def v6host(self):
            return self.getTypedRuleContext(CurlParser.V6hostContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIPv6Host" ):
                listener.enterIPv6Host(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIPv6Host" ):
                listener.exitIPv6Host(self)


    class DomainNameOrIPv4HostContext(HostnameContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CurlParser.HostnameContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def string(self):
            return self.getTypedRuleContext(CurlParser.StringContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDomainNameOrIPv4Host" ):
                listener.enterDomainNameOrIPv4Host(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDomainNameOrIPv4Host" ):
                listener.exitDomainNameOrIPv4Host(self)



    def hostname(self):

        localctx = CurlParser.HostnameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_hostname)
        try:
            self.state = 106
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [16, 19]:
                localctx = CurlParser.DomainNameOrIPv4HostContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 101
                self.string()
                pass
            elif token in [8]:
                localctx = CurlParser.IPv6HostContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 102
                self.match(CurlParser.T__7)
                self.state = 103
                self.v6host()
                self.state = 104
                self.match(CurlParser.T__8)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class V6hostContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def string(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CurlParser.StringContext)
            else:
                return self.getTypedRuleContext(CurlParser.StringContext,i)


        def DIGITS(self, i:int=None):
            if i is None:
                return self.getTokens(CurlParser.DIGITS)
            else:
                return self.getToken(CurlParser.DIGITS, i)

        def getRuleIndex(self):
            return CurlParser.RULE_v6host

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterV6host" ):
                listener.enterV6host(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitV6host" ):
                listener.exitV6host(self)




    def v6host(self):

        localctx = CurlParser.V6hostContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_v6host)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==10:
                self.state = 108
                self.match(CurlParser.T__9)


            self.state = 113
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.state = 111
                self.string()
                pass

            elif la_ == 2:
                self.state = 112
                self.match(CurlParser.DIGITS)
                pass


            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5 or _la==10:
                self.state = 115
                _la = self._input.LA(1)
                if not(_la==5 or _la==10):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 118
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
                if la_ == 1:
                    self.state = 116
                    self.string()
                    pass

                elif la_ == 2:
                    self.state = 117
                    self.match(CurlParser.DIGITS)
                    pass


                self.state = 124
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PortContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DIGITS(self):
            return self.getToken(CurlParser.DIGITS, 0)

        def getRuleIndex(self):
            return CurlParser.RULE_port

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPort" ):
                listener.enterPort(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPort" ):
                listener.exitPort(self)




    def port(self):

        localctx = CurlParser.PortContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_port)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(CurlParser.DIGITS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PathContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def string(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CurlParser.StringContext)
            else:
                return self.getTypedRuleContext(CurlParser.StringContext,i)


        def getRuleIndex(self):
            return CurlParser.RULE_path

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPath" ):
                listener.enterPath(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPath" ):
                listener.exitPath(self)




    def path(self):

        localctx = CurlParser.PathContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_path)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.string()
            self.state = 132
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,15,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 128
                    self.match(CurlParser.T__6)
                    self.state = 129
                    self.string() 
                self.state = 134
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,15,self._ctx)

            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 135
                self.match(CurlParser.T__6)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UserContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def string(self):
            return self.getTypedRuleContext(CurlParser.StringContext,0)


        def getRuleIndex(self):
            return CurlParser.RULE_user

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUser" ):
                listener.enterUser(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUser" ):
                listener.exitUser(self)




    def user(self):

        localctx = CurlParser.UserContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_user)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.string()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LoginContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def user(self):
            return self.getTypedRuleContext(CurlParser.UserContext,0)


        def password(self):
            return self.getTypedRuleContext(CurlParser.PasswordContext,0)


        def getRuleIndex(self):
            return CurlParser.RULE_login

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogin" ):
                listener.enterLogin(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogin" ):
                listener.exitLogin(self)




    def login(self):

        localctx = CurlParser.LoginContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_login)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.user()
            self.state = 143
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 141
                self.match(CurlParser.T__4)
                self.state = 142
                self.password()


            self.state = 145
            self.match(CurlParser.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PasswordContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def string(self):
            return self.getTypedRuleContext(CurlParser.StringContext,0)


        def getRuleIndex(self):
            return CurlParser.RULE_password

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPassword" ):
                listener.enterPassword(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPassword" ):
                listener.exitPassword(self)




    def password(self):

        localctx = CurlParser.PasswordContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_password)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.string()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FragContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def string(self):
            return self.getTypedRuleContext(CurlParser.StringContext,0)


        def DIGITS(self):
            return self.getToken(CurlParser.DIGITS, 0)

        def getRuleIndex(self):
            return CurlParser.RULE_frag

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFrag" ):
                listener.enterFrag(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFrag" ):
                listener.exitFrag(self)




    def frag(self):

        localctx = CurlParser.FragContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_frag)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.match(CurlParser.T__11)
            self.state = 152
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,18,self._ctx)
            if la_ == 1:
                self.state = 150
                self.string()
                pass

            elif la_ == 2:
                self.state = 151
                self.match(CurlParser.DIGITS)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def search(self):
            return self.getTypedRuleContext(CurlParser.SearchContext,0)


        def getRuleIndex(self):
            return CurlParser.RULE_query

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuery" ):
                listener.enterQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuery" ):
                listener.exitQuery(self)




    def query(self):

        localctx = CurlParser.QueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_query)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.match(CurlParser.T__12)
            self.state = 155
            self.search()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SearchContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def searchparameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CurlParser.SearchparameterContext)
            else:
                return self.getTypedRuleContext(CurlParser.SearchparameterContext,i)


        def getRuleIndex(self):
            return CurlParser.RULE_search

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSearch" ):
                listener.enterSearch(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSearch" ):
                listener.exitSearch(self)




    def search(self):

        localctx = CurlParser.SearchContext(self, self._ctx, self.state)
        self.enterRule(localctx, 36, self.RULE_search)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.searchparameter()
            self.state = 162
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==14:
                self.state = 158
                self.match(CurlParser.T__13)
                self.state = 159
                self.searchparameter()
                self.state = 164
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SearchparameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def string(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CurlParser.StringContext)
            else:
                return self.getTypedRuleContext(CurlParser.StringContext,i)


        def DIGITS(self):
            return self.getToken(CurlParser.DIGITS, 0)

        def HEX(self):
            return self.getToken(CurlParser.HEX, 0)

        def getRuleIndex(self):
            return CurlParser.RULE_searchparameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSearchparameter" ):
                listener.enterSearchparameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSearchparameter" ):
                listener.exitSearchparameter(self)




    def searchparameter(self):

        localctx = CurlParser.SearchparameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 38, self.RULE_searchparameter)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self.string()
            self.state = 172
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==15:
                self.state = 166
                self.match(CurlParser.T__14)
                self.state = 170
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,20,self._ctx)
                if la_ == 1:
                    self.state = 167
                    self.string()
                    pass

                elif la_ == 2:
                    self.state = 168
                    self.match(CurlParser.DIGITS)
                    pass

                elif la_ == 3:
                    self.state = 169
                    self.match(CurlParser.HEX)
                    pass




        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StringContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(CurlParser.STRING, 0)

        def DIGITS(self):
            return self.getToken(CurlParser.DIGITS, 0)

        def getRuleIndex(self):
            return CurlParser.RULE_string
